[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Drone 512x512/Untitled-1_0001_RO51-.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Drone 512x512/Untitled-1_0002_RO5I-.-LIGHT.png" type="Texture" id=2]
[ext_resource path="res://Weapons/BouncyGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boss/BossDrone.gd" type="Script" id=4]
[ext_resource path="res://Boss/Shield.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boss/DummyTarget.tscn" type="PackedScene" id=7]
[ext_resource path="res://Boss/JunkGenerator.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Particles/smoke3.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=9]
radius = 193.166

[sub_resource type="Animation" id=8]
resource_name = "New Anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 3.7, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 40.0, -40.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:v_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "New Anim"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.234375, 1 )
colors = PoolColorArray( 0.580392, 0.580392, 0.580392, 0.517647, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0.554545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 10.01
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -50, 0 )
initial_velocity = 422.14
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.4
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[node name="BossDrone" type="PathFollow2D"]
script = ExtResource( 4 )
health = 10

[node name="JunkGenerator" parent="." instance=ExtResource( 8 )]

[node name="HitBox" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 9 )

[node name="Untitled-10002Ro5i--Light" type="Sprite" parent="."]
position = Vector2( 16, 132 )
texture = ExtResource( 2 )

[node name="Untitled-10001Ro51-" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shield" parent="." instance=ExtResource( 5 )]
position = Vector2( -10, -2 )

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="Guns" type="Node2D" parent="."]

[node name="BouncyGun2" parent="Guns" instance=ExtResource( 3 )]
position = Vector2( -101, -86 )
rotation = 4.34642
cooldown = 1.2
bulletSpeed = 700

[node name="BouncyGun3" parent="Guns" instance=ExtResource( 3 )]
position = Vector2( -9.00002, -124 )
rotation = 4.72461
cooldown = 1.2
bulletSpeed = 700

[node name="BouncyGun" parent="Guns" instance=ExtResource( 3 )]
position = Vector2( 90, -102 )
rotation = -1.29363
cooldown = 1.2
bulletSpeed = 700

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 8 )
anims/RESET = SubResource( 2 )

[node name="DamageFlash" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="DummyTarget" parent="." instance=ExtResource( 7 )]

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -48 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 16 )
texture = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
